テストを修正した。 new Integer()ではなくInteger.valueOf()を使うようにした。