@@ -13,19 +13,19 @@ public class ClientTest {
 
   @Test(expectedExceptions = { NullPointerException.class })
   public void nickNameがnullだとNullPointerWxceptionを投げるよ() {
-    new Client(new Integer(0), null);
+    new Client(Integer.valueOf(0), null);
   }
 
   @Test(expectedExceptions = { IllegalArgumentException.class })
   public void nickNameが空文字列だとIllegalArgumentExceptionを投げるよ() {
 
-    new Client(new Integer(0), "");
+    new Client(Integer.valueOf(0), "");
   }
 
   @Test
   public void それ以外だとちゃんとクラスを作るよ() {
-    Client instance = new Client(new Integer(0), "test");
-    assertEquals(instance.getChannelID(), new Integer(0));
+    final Client instance = new Client(Integer.valueOf(0), "test");
+    assertEquals(instance.getChannelID(), Integer.valueOf(0));
     assertEquals(instance.getNickName(), "test");
   }
 }
